Threadモデル作成終了

--- a/ShortCom/en.lproj/MainStoryboard.storyboard
+++ b/ShortCom/en.lproj/MainStoryboard.storyboard
@@ -12,7 +12,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="p0c-ml-Hdc" kind="relationship" relationship="rootViewController" id="qaU-dA-LF8"/>
+                        <segue destination="p0c-ml-Hdc" kind="relationship" relationship="rootViewController" id="ZNm-FR-PuZ"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KWZ-EZ-NEs" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -30,14 +30,16 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="uAL-Tf-bCS">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ThreadCell" textLabel="GSI-4I-Pad" style="IBUITableViewCellStyleDefault" id="x0G-m3-zqs">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ThreadCell" textLabel="h2o-5b-F9o" style="IBUITableViewCellStyleDefault" id="Y3E-cA-EZe">
                                         <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GSI-4I-Pad">
+                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="h2o-5b-F9o">
+                                                    <rect key="frame" x="10" y="0.0" width="300" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -47,13 +49,18 @@
                                         </view>
                                     </tableViewCell>
                                 </prototypes>
+                                <sections/>
+                                <connections>
+                                    <outlet property="dataSource" destination="p0c-ml-Hdc" id="IVx-Jn-ebv"/>
+                                    <outlet property="delegate" destination="p0c-ml-Hdc" id="nip-AN-dud"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="uAL-Tf-bCS" firstAttribute="bottom" secondItem="PQt-v8-uz8" secondAttribute="bottom" type="default" id="Sj4-Vq-UWq"/>
+                            <constraint firstItem="uAL-Tf-bCS" firstAttribute="top" secondItem="PQt-v8-uz8" secondAttribute="top" type="default" id="3Jn-LI-8kS"/>
                             <constraint firstItem="uAL-Tf-bCS" firstAttribute="leading" secondItem="PQt-v8-uz8" secondAttribute="leading" type="default" id="cz8-XV-473"/>
-                            <constraint firstItem="uAL-Tf-bCS" firstAttribute="top" secondItem="PQt-v8-uz8" secondAttribute="top" type="default" id="h7h-hb-AKS"/>
+                            <constraint firstItem="uAL-Tf-bCS" firstAttribute="bottom" secondItem="PQt-v8-uz8" secondAttribute="bottom" type="default" id="pqE-Ey-uh3"/>
                             <constraint firstItem="uAL-Tf-bCS" firstAttribute="trailing" secondItem="PQt-v8-uz8" secondAttribute="trailing" type="default" id="zN6-s1-Vhp"/>
                         </constraints>
                     </view>
