--- a/ShortCom/en.lproj/MainStoryboard.storyboard
+++ b/ShortCom/en.lproj/MainStoryboard.storyboard
@@ -58,16 +58,41 @@
             </objects>
             <point key="canvasLocation" x="123" y="-45"/>
         </scene>
-        <!--View Controller - Thread詳細-->
+        <!--Thread Detail View Controller - Thread詳細-->
         <scene sceneID="Kt1-OG-Rae">
             <objects>
-                <viewController id="5qD-qd-IP7" sceneMemberID="viewController">
+                <viewController id="5qD-qd-IP7" customClass="ThreadDetailViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="eOl-RP-0Hv">
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="スレッドタイトル" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5bP-lg-i6D">
+                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0lt-oB-gj2">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="190" id="YS5-Ft-7XO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="5bP-lg-i6D" firstAttribute="leading" secondItem="eOl-RP-0Hv" secondAttribute="leading" constant="37" id="2SA-TU-2eK"/>
+                            <constraint firstItem="0lt-oB-gj2" firstAttribute="leading" secondItem="5bP-lg-i6D" secondAttribute="leading" type="default" id="SBY-Gg-fJj"/>
+                            <constraint firstItem="5bP-lg-i6D" firstAttribute="top" secondItem="eOl-RP-0Hv" secondAttribute="top" constant="51" id="U43-9t-cEB"/>
+                            <constraint firstItem="0lt-oB-gj2" firstAttribute="top" secondItem="eOl-RP-0Hv" secondAttribute="top" constant="86" id="goF-Th-Z6n"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Thread詳細" id="9n5-f0-YU1"/>
+                    <navigationItem key="navigationItem" title="Thread詳細" id="9n5-f0-YU1">
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="Y90-on-2Ma"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="nameText" destination="0lt-oB-gj2" id="Y1N-FN-JmH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="79h-E9-nB5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -92,6 +117,12 @@
     <classes>
         <class className="NSLayoutConstraint" superclassName="NSObject">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="ThreadDetailViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ThreadDetailViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="nameText" candidateClass="UITextField"/>
+            </relationships>
         </class>
         <class className="ViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
