--- a/ShortCom/en.lproj/MainStoryboard.storyboard
+++ b/ShortCom/en.lproj/MainStoryboard.storyboard
@@ -88,13 +88,18 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Thread詳細" id="9n5-f0-YU1">
-                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="Y90-on-2Ma"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="Y90-on-2Ma">
+                            <connections>
+                                <segue destination="N9N-ec-XWt" kind="unwind" unwindAction="threadUpdated:" id="mXh-6R-vQw"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="nameText" destination="0lt-oB-gj2" id="Y1N-FN-JmH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="79h-E9-nB5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="N9N-ec-XWt" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="479" y="-45"/>
         </scene>
@@ -124,9 +129,13 @@
                 <relationship kind="outlet" name="nameText" candidateClass="UITextField"/>
             </relationships>
         </class>
+        <class className="UIStoryboardSegue" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UIStoryboardSegue.h"/>
+        </class>
         <class className="ViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
             <relationships>
+                <relationship kind="action" name="threadUpdated:" candidateClass="UIStoryboardSegue"/>
                 <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
             </relationships>
         </class>
