--- a/ShortCom/en.lproj/MainStoryboard.storyboard
+++ b/ShortCom/en.lproj/MainStoryboard.storyboard
@@ -31,7 +31,7 @@
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                         <connections>
-                                            <segue destination="5qD-qd-IP7" kind="push" id="gfx-1K-KaS"/>
+                                            <segue destination="5qD-qd-IP7" kind="push" identifier="edit" id="gfx-1K-KaS"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -49,7 +49,13 @@
                             <constraint firstItem="4MT-Vu-ceW" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="kBn-JH-6HW"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Thread一覧" id="Z9M-mb-pcp"/>
+                    <navigationItem key="navigationItem" title="Thread一覧" id="Z9M-mb-pcp">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="zZj-3m-gBK">
+                            <connections>
+                                <segue destination="5qD-qd-IP7" kind="push" identifier="new" id="BZS-ui-Iqh"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="4MT-Vu-ceW" id="vqw-nz-8uV"/>
                     </connections>
@@ -119,30 +125,12 @@
             <point key="canvasLocation" x="-229" y="-45"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="ThreadDetailViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ThreadDetailViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="nameText" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-        <class className="UIStoryboardSegue" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UIStoryboardSegue.h"/>
-        </class>
-        <class className="ViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="threadUpdated:" candidateClass="UIStoryboardSegue"/>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="gfx-1K-KaS"/>
+    </inferredMetricsTieBreakers>
 </document>
